[EPMCDLAB-1693]: fixed overlapping between library grid and action buttons

--- a/services/self-service/src/main/resources/webapp/src/app/resources/exploratory/install-libraries/install-libraries.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/resources/exploratory/install-libraries/install-libraries.component.scss
@@ -339,8 +339,8 @@ mat-chip.mat-chip:not(.mat-basic-chip) {
     height: 60%;
     .mat-list {
       .scrollingList {
-        max-height: 100%;
-        height: 100%;
+        max-height: 85%;
+        height: 85%;
       }
     }
   }
